--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,36 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{IEEE = {Institute of Electrical and Electronics Engineers,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{8935827,
+  abbr      = {SNPD},
+  author    = {Chirayil, Amala and Maharjan, Rajendra and Wu, Ching-Seh},
+  booktitle = {20th IEEE/ACIS International Conference on Software Engineering, Artificial Intelligence, Networking and Parallel/Distributed Computing (SNPD)},
+  title     = {Survey on Anomaly Detection in Wireless Sensor Networks (WSNs)},
+  year      = {2019},
+  publisher = IEEE,
+  volume    = {},
+  number    = {},
+  pages     = {150-157},
+  doi       = {10.1109/SNPD.2019.8935827},
+  url       = {https://ieeexplore.ieee.org/document/8935827},
+  html      = {https://ieeexplore.ieee.org/document/8935827},
+  selected  = {true},
+  abstract  = {The development of wireless sensor networks (WSNs) has given rise to smart systems that can be found in almost every industry, ranging from healthcare to transportation. Smart systems enable many organizations to execute their businesses efficiently and effectively in a timely manner. The high number of smart systems that exist in today's society has been made possible by advancements being made in embedded systems and wireless networking. Since data is constantly being collected and analyzed in a WSN application, it's important to ensure that the data being processed is precise, valid, consistent, and accurate. Therefore, in this survey, we are going to be examining the different types of anomalies that exist in WSNs, specifically focusing on data anomalies. In addition, we will also be discussing the different anomaly detection methods and further explore two specific anomaly detection methods, statistical-based and cluster-based, by examining two different implementations. The two different implementations used the temperature data of Laverton, VIC, Australia [14] and produced the same results, verifying the accuracy of the two anomaly detection methods.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{Wilson2021,
+  abbr        = {SJSU},
+  abstract    = {Privacy-preserving visual recognition is an important area of research that is gaining momentum in the field of computer vision. In a production environment, it is critical to have neural network models learn continually from user data. However, sharing raw user data with a server is less desirable from a regulatory, security and privacy perspective. Federated learning addresses the problem of privacy- preserving visual recognition. More specifically, we closely examine and dissect a framework known as Dual User Adaptation (DUA) presented by Lange et al. at CVPR 2020, due to its novel idea of bringing about user-adaptation on both the server-side and user device side. Data in the server and user device is predefined into a series of tasks prior to training and testing. However, since user data is constantly evolving, it's important to see how DUA performs on unseen data or tasks. A few implementations are also executed to see if the performance of the DUA model can be improved on unseen data. In addition, two other federated learning frameworks are implemented to compare how it performs with DUA. Through this research we show that retraining the classifier layer of the merged model with all data categories greatly improves the performance for real-world implementation of DUA.},
+  author      = {Wilson, Amala Varghese},
+  booktitle   = {Master's Projects},
+  doi         = {https://doi.org/10.31979/etd.5ruj-7wyr},
+  institution = {San Jose State University},
+  keywords    = {Dual User-Adaptation,FedAvg,FedProx,Federated Learning,Privacy-preserving},
+  title       = {{Privacy Preserving for Multiple Computer Vision Tasks}},
+  url         = {https://scholarworks.sjsu.edu/etd_projects/1052},
+  html        = {https://scholarworks.sjsu.edu/etd_projects/1052},
+  year        = {2021},
+  selected    = {true}
 }
